--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,1 +1,20 @@
-<ejs-grid></ejs-grid>
+<h1 class="header">Questions Grid</h1>
+
+
+<!--<div class="e-float-input" style="width: 200px; display: inline-block;">-->
+<!--  <input type="text" id="searchtext" class="searchtext" (change)="search()"/>-->
+<!--  <span class="e-float-line"></span>-->
+<!--  <label class="e-float-text">Search Text</label>-->
+<!--</div>-->
+<!--<button id="search" (click)="search()">Search</button>-->
+
+<ejs-grid #queGrid [dataSource]="questions" [allowPaging]="true" [allowSorting]="true" [allowFiltering]="true"
+          [pageSettings]="pageSettings" [toolbar]="toolbarOptions" [editSettings]="editOptions" [searchSettings]="searchOption"
+  [allowPdfExport]="true" [allowExcelExport]="true">
+  <e-columns>
+    <e-column field="name" headerText="Name"></e-column>
+    <e-column field="difficulty" headerText="Difficulty"></e-column>
+    <e-column field="type" headerText="Type"></e-column>
+    <e-column field="questionBanks" headerText="Total Questions"></e-column>
+  </e-columns>
+</ejs-grid>
