--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,4 +1,4 @@
-<h1 class="header">Questions Grid</h1>
+<h1 class="header" style="margin: 50px auto;">Questions Grid</h1>
 
 <!--<div class="e-float-input" style="width: 200px; display: inline-block;">-->
 <!--  <input type="text" id="searchtext" class="searchtext" (change)="search()"/>-->
@@ -12,6 +12,7 @@
 [contextMenuItems]="contextMenuItems">
 <!--  [allowPdfExport]="true" [allowExcelExport]="true">-->
   <e-columns>
+    <e-column field="questionID" headerText="ID"></e-column>
     <e-column field="name" headerText="Name"></e-column>
     <e-column field="difficulty" headerText="Difficulty"></e-column>
     <e-column field="type" headerText="Type"></e-column>
