--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="heading">
     <h1 class="heading__title">Demo Grid Pages using SyncFusion</h1>
-    <p class="heading__credits">Developed By: Jay Trivedi</p>
+    <p class="heading__credits"><a class="heading__link" target="_blank" href="https://github.com/JAY-TRIVEDI-007/">Developed By: Jay Trivedi</a></p>
   </div>
   <div class="cards">
 
