--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
 .main-container {
   padding: 30px;
 }
@@ -30,13 +19,20 @@ body {
   transition: all 0.5s;
 }
 
+.heading__link {
+  text-decoration: none;
+}
+
+.heading__credits .heading__link {
+  color: inherit;
+}
+
 /* CARDS */
 
 .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 150px;
 }
 
 .card {
