--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,22 +1,32 @@
 <h1 class="header" style="margin: 50px auto;">Questions Grid</h1>
 
-<!--<div class="e-float-input" style="width: 200px; display: inline-block;">-->
-<!--  <input type="text" id="searchtext" class="searchtext" (change)="search()"/>-->
-<!--  <span class="e-float-line"></span>-->
-<!--  <label class="e-float-text">Search Text</label>-->
-<!--</div>-->
-<!--<button id="search" (click)="search()">Search</button>-->
+<div class="toolbar container">
+    <div class="input-group">
+      <button class="btn btn-primary">
+        <i class="fa fa-plus"></i>
+        Add Question
+      </button>
+    </div>
+
+    <div class="input-group">
+      <div class="form-outline">
+        <input id="search-input" type="search" name="search-input" class="form-control" placeholder="Search" (change)="search()"/>
+      </div>
+      <button id="search-button" type="button" class="btn btn-primary" (click)="search()">
+        <i class="fa fa-search"></i>
+      </button>
+    </div>
+</div>
 
 <ejs-grid #queGrid [dataSource]="questions | async" [allowPaging]="true" [allowSorting]="true" [allowFiltering]="true"
-          [pageSettings]="pageSettings" [toolbar]="toolbarOptions" [editSettings]="editOptions" [searchSettings]="searchOption"
-[contextMenuItems]="contextMenuItems">
-<!--  [allowPdfExport]="true" [allowExcelExport]="true">-->
+          [allowResizing]="true" [pageSettings]="pageSettings" [editSettings]="editOptions" [searchSettings]="searchOption" [filterSettings]="filterOptions" [contextMenuItems]="contextMenuItems">
   <e-columns>
-    <e-column field="questionID" headerText="ID"></e-column>
+    <e-column field="questionID" headerText="ID" isPrimaryKey="true"></e-column>
     <e-column field="name" headerText="Name"></e-column>
     <e-column field="difficulty" headerText="Difficulty"></e-column>
     <e-column field="type" headerText="Type"></e-column>
-    <e-column field="questionBanks" headerText="Total Questions"></e-column>
+    <e-column field="questionBanks" headerText="Question Bank ID"></e-column>
+    <e-column headerText="Action" disableHtmlEncode="true"></e-column>
   </e-columns>
 </ejs-grid>
 
