--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';
+/*@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';*/
 @import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
