--- a/src/app/questions-bank/questions-bank.component.css
+++ b/src/app/questions-bank/questions-bank.component.css
@@ -5,4 +5,21 @@
 
 .input-group {
   display: inline-flex !important;
+  /*align-items: flex-start !important;*/
+}
+
+.close {
+  border: none;
+}
+
+.form-label {
+  margin-top: 7px;
+}
+
+.options {
+  background-color: transparent !important;
+}
+
+.form-check {
+  margin-top: 7px;
 }
